syntax = "proto2";

package crypto.pb;

enum KeyType {
	RSA = 0;
	Ed25519 = 1;
	Secp256k1 = 2;
	ECDSA = 3;
}

message PublicKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message PrivateKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message SignedEnvelope {
	required PublicKey PublicKey = 1;
	required bytes TypeHint = 2;
	required bytes Contents = 3;
	required bytes Signature = 4;
}